# common

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: bigint.h  common.h  common_error.h  common_exception.h  common_istream.h  common_linspace.h  common_literals.h  common_math.h  common_ostream.h  common_output.h  common_ring_buffer.h  common_time.h  pyplot.h
src/: common_error.cpp  common_exception.cpp  common_istream.cpp  common_linspace.cpp  common_literals.cpp  common_ostream.cpp  common_output.cpp  common_ring_buffer.cpp  common_time.cpp
test/: common_exception_test.cpp  common_graph_test.cpp  common_istream_test.cpp  common_literals_test.cpp  common_math_test.cpp  common_output_test.cpp  common_test.cpp  test_common.cpp  test_common_error.cpp  test_common_exception.cpp  test_common_istream.cpp  test_common_linspace.cpp  test_common_math.cpp  test_common_output.cpp  test_common_ring_buffer.cpp  test_common_time.cpp
utils/: CMakeLists.txt
utils/include/: EigenJsonUtils.h
utils/test/: test_eigen_utils.cpp
